Fixed width on navbar to fit the width of main content & Responsiveness starts on smaller screens

--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ nav {
   border-bottom: 2px solid rgb(255, 79, 27);
 }
 nav ul {
-  min-width: 65%;
+  width: 95%;
+  max-width: 1000px;
   display: flex;
   justify-content: space-between;
 }
@@ -142,7 +143,7 @@ End of Fun! page
 /* --------------------
 Start of Media queries
 -------------------- */
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 768px) {
   #skipToContent {
     display: none;
   }
